# FinTect

./: README.md  settings.gradle
app/: .gitignore  build.gradle  google-services.json
app/src/androidTest/java/com/example/fintectapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/fintectapp/: DataModel.kt  LoginActivity.kt  MainActivity.kt  RegisterActivity.kt  RegisterAgreementActivity.kt
app/src/main/java/com/example/fintectapp/ui/main/: ApproveResultActivity.kt  AuthFragment.kt  DenyResultActivity.kt  ErrorResultActivity.kt  (+11 more)
app/src/main/res/drawable/: item_border.xml
app/src/main/res/drawable-anydpi/: ic_action_name.xml
app/src/main/res/layout/: activity_approve_result.xml  activity_deny_result.xml  activity_error_result.xml  activity_login.xml  activity_login_bottom.xml  activity_main.xml  activity_register.xml  activity_register_agreement.xml  activity_result_detail.xml  activity_upload.xml  activity_upload_agreement.xml  activity_upload_success.xml  activity_waiting_status_result.xml  fragment_auth.xml  fragment_auth_list.xml  fragment_history.xml  fragment_history_list.xml
app/src/main/res/mipmap-anydpi-v26/: icon_fintect_round.xml
app/src/main/res/values/: colors.xml  icon_fintect_background.xml  strings.xml
app/src/test/java/com/example/fintectapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
server/: .gitignore  README.md  pyproject.toml  run  server.py  test.sh  test_fake.sh  test_real.sh  test_single.py
server/DeepFake_Xception/: crop_face.py  xception.py
(+3 files in other folders)
