[tool.poetry]
name = "mandoo-ml-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
flask = "^1.1.2"
firebase-admin = "^4.3.0"
blinker = "^1.4"
opencv-python = "^4.3.0"
torch = "^1.6.0"
scikit-image = "^0.17.2"
torchvision = "^0.7.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
jupyter = "^1.0.0"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
